Fix #2