@@ -17,6 +17,8 @@
 package org.holodeckb2b.bdxr.smp.client.impl.peppol;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.security.cert.CertificateException;
 import java.security.cert.X509Certificate;
@@ -309,10 +311,10 @@ public class PEPPOLResultProcessor implements ISMPResultProcessor {
 		String techInfoURL = epInfoXML.getTechnicalInformationUrl();
 		if (!Utils.isNullOrEmpty(techInfoURL))
 			try {
-				epInfo.setTechnicalInformationURL(new URL(techInfoURL));
-			} catch (MalformedURLException ex) {
+				epInfo.setTechnicalInformationURL(new URI(techInfoURL));
+			} catch (URISyntaxException ex) {
 				log.error("Invalid URL specified for technical information! Value={}",
-							epInfoXML.getTechnicalContactUrl());
+							epInfoXML.getTechnicalInformationUrl());
 				throw new SMPQueryException("Invalid endpoint meta-data");
 			}
         epInfo.setExtensions(handleEndpointInfoExtensions(epInfoXML.getExtension()));
